[tool.poetry]
name = "cognite-extractor-utils-mqtt"
version = "0.1.0"
description = "MQTT extension for the Cognite extractor-utils framework"
authors = ["Einar Omang <einar.omang@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/python-extractor-utils-mqtt"

packages = [
    { include="cognite/extractorutils/mqtt", from="." },
]

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["dacite", "paho"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cognite-extractor-utils = "^4.0.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
flake8 = "*"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.0.0"
pre-commit = "^3.0.0"
twine = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
